--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 		<ul>
 			<li><a href="01-gallery.html">Image gallery</a></li>
 			<li><a href="02-lightbox.html">SimpleLightbox library</a></li>
+			<li>
+				<a href="03-calc.html">
+					Product cost calculator depending on the price
+				</a>
+			</li>
 		</ul>
 	</body>
 </html>
